static/css/static.css
/* ... */
#profilePage {
}
#profileTop {
  text-align: center;
}
#profileImage {
  border: 1px solid #E6E5E6;
  width: 200px;
  height: 200px;
}
#profileName {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #333;
  height: auto;
  margin: 20px 0 24px;
  font-weight: lighter;
  font-size: 40px;
}
#profileTagline {
  font-family: "adobe-garamond-pro", Georgia, serif;
  margin-bottom: 24px;
  font-size: 18px;
  color: #666;
}
#profileSnippets > div {
  display: inline-block;
  color: #999;
  margin: 2px 7px;
  font-size: 14px;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  font-weight: lighter;
}
#profileSnippets a {
  color: #999
}
#profilePage #buttons {
  margin: 24px 0 50px;
}
#profilePage .sections {
  margin-bottom: 50px;
}
#profilePage #bio {
  font-size: 22px;
}
#profilePage #bio,
#profilePage #bio p {
  font-size: 16px;
  line-height: 1.3;
}
#profilePage #bio a {
  color: #333;
}
#profilePage ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}
#profilePage li {
}
#profilePage .sheet {
  margin: 26px 0;
  font-size: 18px;
  color: #333;
}
#profilePage .sheet a {
  color: #333;
}
#profileActivity {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #666;
}
#profileActivity a {
  color: #333;
  font-weight: normal;
}
#profilePage #moreActivity {
  display: block;
  margin-top: 30px;
  font-size: 15px;
}
#profilePage  #followMe span{
  font-size: inherit;
}
#profilePage  .button span.en{
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
#profilePage  .button span.he{
  font-family: "Open Sans Hebrew", sans-serif;
  font-size: inherit;
}
#profilePage #followMe.follow span.following{
  display: none;
}
#profilePage #followMe.following span.follow{
  display: none;
}
#profilePage #followMe span.unfollow{
  display:none;
}
#profilePage #followMe.following:hover span.unfollow{
  display:inherit;
}
#profilePage #followMe.following:hover span.following{
  display:none;
}
#activityList .topline {
  font-weight: normal;
}
#activityList .text.en {
  font-family: "adobe-garamond-pro", Georgia, serif;
}
#activityList .text.he {
  font-family: "Taamey Frank", "Times New Roman", serif;
}
#activityList .time {
  color: #ccc;
}
.registrationContent {
  text-align: center;
  margin: 1% auto 0;
  width: 25%;
}

.registrationContent h1 span.en{
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.registrationContent label {
  display: none;
}
.registrationContent input {
  padding: 12px 20px;
  height: initial;
  margin: 1% 0px;
  cursor: pointer;
  border-radius: 4px;
  box-shadow: none;
  border: 1px solid #bbb;
  width: 100%;
  box-sizing: border-box;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  font-size: 14px;
}
.registrationContent ::placeholder{
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif; 
  color: #999;
  font-size: 14px;
}
.registrationContent ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  font-size: 14px;
  font-style: normal;
}
.registrationContent ::-moz-placeholder { /* Firefox 19+ */
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  font-size: 14px;
}
.registrationContent :-ms-input-placeholder { /* IE 10+ */
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  font-size: 14px;
  font-style: normal;
}
.registrationContent :-moz-placeholder { /* Firefox 18- */
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  font-size: 14px;
  font-style: normal;
}
/* Override Chrome's yellow autofill. Change the white to any color ;) */
.registrationContent input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px white inset;
}
.registrationContent button {
  all: initial; /*this is an insane hack, seems to work on chrome, firefox and opera. untested on Safari and Edge*/
  display: block;
  width: 100%;
  color: white;
  background-color: #212E50;
  border: 1px solid #212E50;
  border-radius: 4px;
  padding: 12px 0px;
  margin-top: 30px;
  cursor: pointer;
  font-size: 15px;
  letter-spacing: 1px;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  box-sizing: border-box;
  text-align: center;
}
.registrationContent button:hover {
  background-color: #212E50;
  color: #999;
}
.registrationContent a {
  display: block;
  text-align: center;
  color: #999;
  font-size: 14px;
  font-style: normal;
}
.registrationContent a .en, .registrationContent button .en{
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.registrationContent a .he, .registrationContent button .he{
  font-family: "Open Sans Hebrew", sans-serif;
}


#login.registrationContent #resetLink{
  margin: 20px 0;
  color: #999;
  font-size: 14px;
  font-style: normal;
}
#visualizationsPage {
  text-align: left;
}
footer#footer {
  background-color: white;
  border-top: 1px solid #F4F4F4;
  overflow: hidden;
  padding: 18px 40px;
  text-align: left;
}
#footerInner {
  max-width: 900px;
  margin: 0 auto;
}
footer .section {
  display: inline-block;
  vertical-align: top;
  width: 160px;
  text-align: left;
}
#footer .section .header {
  color: #666;
  margin-bottom: 12px;
  font-weight: normal;
  font-size: 13px;
}
footer .section a {
  color: #aaa;
  font-size: 14px;
  margin: 2px 0;
}
footer .fa {
  margin: 0 3px;
}
footer .section.last {
  float: right;
  text-align: right;
  width: 210px;
  border-left: 1px solid #EAEAEA;
}
#siteLanguageToggle {
  color: #999;
  margin-top: 15px;
  font-size: 13px;
}
a#siteLanguageEnglish, a#siteLanguageHebrew {
  cursor: pointer;
  color: #666;
  display: inline;
  margin: 0 3px;
  font-size: 13px;
}
#siteLanguageEnglish:hover, #siteLanguageHebrew:hover {
  text-decoration: underline;
}
a#siteLanguageHebrew {
  font-size: 15px;
}
/* ... */

